--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="navbar">
     <div class="container">
       <div class="logo">
-        <img src="https://i.ibb.co/3yZkVZp/logo.png" alt="Hassan Ali Logo" />
+        <img src="https://i.ibb.co/rfX7CBwx/grok-image-uayyhf.jpg" alt="Hassan Ali Logo" />
       </div>
       <nav>
         <ul class="nav-links">
@@ -40,7 +40,7 @@
   <section id="home" class="hero">
     <div class="hero-content">
       <div class="profile-image">
-        <img src="https://i.ibb.co/6ZJgZzT/profile.jpg" alt="Hassan Ali" />
+        <img src="https://i.ibb.co/Tx8SwMh7/file-00000000400061fdb0c970b54d17f416-1.png" alt="Hassan Ali" />
       </div>
       <h1>Hello, I'm <span>Hassan Ali</span></h1>
       <p>Web Designer, Graphic Designer, Ghostwriter, Freelancer, Author, Poet, Novelist, Story Writer</p>
@@ -91,3 +91,4 @@
 
 </body>
 </html>
+      
