--- a/index.html
+++ b/index.html
@@ -91,4 +91,23 @@
 
 </body>
 </html>
-      
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+      <div class="share-buttons">
+  <h3>📢 Share my Website</h3>
+  
+  <a href="https://www.facebook.com/sharer/sharer.php?u=https://yourwebsite.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+  
+  <a href="https://twitter.com/intent/tweet?url=https://yourwebsite.com&text=Check+this+out!" target="_blank"><i class="fab fa-twitter"></i></a>
+  
+  <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://yourwebsite.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+  
+  <a href="https://api.whatsapp.com/send?text=Check+this+amazing+portfolio:+https://yourwebsite.com" target="_blank"><i class="fab fa-whatsapp"></i></a>
+  
+  <a href="https://t.me/share/url?url=https://yourwebsite.com&text=Check+this+amazing+portfolio" target="_blank"><i class="fab fa-telegram"></i></a>
+  
+  <!-- Copy Link Button -->
+  <button onclick="copyLink()" class="copy-btn"><i class="fas fa-copy"></i></button>
+</div>
+
+
